@@ -20,6 +20,26 @@ import com.vividsolutions.jump.workbench.ui.Viewport;
  *
  **/
 public class ScreenScale {
+    
+    // Some refactoring needed here, resolution should not be static
+    
+    // [mmichaud 2013-03-27] Toolkit.getDefaultToolkit().getScreenResolution()
+	// does not return the correct value as it does not know the physical 
+	// screen size.
+	// On modern computers, 96 ppi is a good approximation when screen is 
+	// at full resolution, while resolution returned by Toolkit is 120;
+	// Moreover, it seems that changing the screen resolution does not
+	// change the value returned by Toolkit.getDefaultToolkit().getScreenResolution()
+	//double SCREENRES = Toolkit.getDefaultToolkit().getScreenResolution(); //72 dpi or 96 dpi or ..
+    private static double resolution = 96;
+    
+    public static double getResolution() {
+        return resolution;
+    } 
+    
+    public static void setResolution(double res) {
+        resolution = res;
+    }
 
 	/**
 	 * Delivers the scale of the map shown on the display. The scale is 
@@ -33,9 +53,9 @@ public class ScreenScale {
 	public static double getHorizontalMapScale(Viewport port){	
 	
 		double horizontalScale = 0;
-		//[sstein] maybe store screenres on the blackboard 
-		//         if obtaining is processing intensive? 
-	    double SCREENRES = Toolkit.getDefaultToolkit().getScreenResolution(); //72 dpi or 96 dpi or ..     
+		
+
+	    
 	    double INCHTOCM = 2.54; //cm
 	    
 	    double panelWidth = port.getPanel().getWidth(); //pixel
@@ -47,9 +67,10 @@ public class ScreenScale {
 	    // ratio = 2.54/72 (cm/pix) ~ 0.35mm
 	    // mapLength[cm] = noPixel * ratio
 	    // scale = realLength *100 [m=>cm] / mapLength
-	    //-----                            
-	    horizontalScale = modelWidth*100 / (INCHTOCM / SCREENRES * panelWidth);
+	    //-----       
+	    horizontalScale = modelWidth*100 / (INCHTOCM / resolution * panelWidth);
 
 		return horizontalScale;
 	}
+	
 }
