@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-03-28 mmichaud <michael.michaud@free.fr>
+  * fix Screen Scale and SaveImageAsSVG problem (would need some refactoring 
+    after 1.6 release though)
+  
 2013-03-27 mmichaud <michael.michaud@free.fr>
   * Change output resolution of svg drawer from 0.5 to 0.1 pixel
 
